[package]
name = "nonogram"
license = "GPL-3.0"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6",  default-features = false,  features = ["bevy_winit"] }
bevy_egui = "0.10"
bincode = "1.3"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
stopwatch = "0.0"
toml = "0.5"
toml_edit = "0.13"


#[target.x86_64-unknown-linux-gnu]
#linker = "/usr/bin/clang"
#rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]

# NOTE: you must manually install https://github.com/michaeleisel/zld on mac. you can easily do this with the "brew" package manager:
# `brew install michaeleisel/zld/zld`
#[target.x86_64-apple-darwin]
#rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld", "-Zshare-generics=y"]

#[target.aarch64-apple-darwin]
#rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld", "-Zshare-generics=y"]

#[target.x86_64-pc-windows-msvc]
#linker = "rust-lld.exe"
#rustflags = ["-Zshare-generics=n"]

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/MinerSebas/bevy_lint", branch = "main" },
]